--- a/wp-content/themes/hello-elementor-child/assets/scss/_variables.scss
+++ b/wp-content/themes/hello-elementor-child/assets/scss/_variables.scss
@@ -7,8 +7,8 @@ $accent: var(--e-global-color-accent); // #FFB938
 $light-blue: var(--e-global-color-bf33bd2); // #6BB1E3
 $light-blue-50: var(--e-global-color-363ef00); // #A9D2EF
 $light-blue-5: var(--e-global-color-7f6251e); // #EAF4FB
-$primary-50: var(--e-global-color-954c1db);  // #7E7FD3
-$primary-5: var(--e-global-color-071fa3d); // #ECECF8
+$blue-50: var(--e-global-color-954c1db);  // #7E7FD3
+$blue-5: var(--e-global-color-071fa3d); // #ECECF8
 $dark-blue: var(--e-global-color-6ae0d3f);  // #1B1B32
 $navy: var(--e-global-color-f5c6513); // #0F2A3D
 $black: var(--e-global-color-d9541e8);  // #000000
