--- a/wp-content/themes/hello-elementor-child/assets/scss/style.css
+++ b/wp-content/themes/hello-elementor-child/assets/scss/style.css
@@ -35,4 +35,8 @@ body {
 
 .entry-title {
   display: none !important;
+}
+
+.align-items-end {
+  align-items: end;
 }/*# sourceMappingURL=style.css.map */
