Fine funzionamento del form

--- a/wp-content/themes/hello-elementor-child/assets/scss/_variables.scss
+++ b/wp-content/themes/hello-elementor-child/assets/scss/_variables.scss
@@ -13,4 +13,6 @@ $dark-blue: var(--e-global-color-6ae0d3f);  // #1B1B32
 $navy: var(--e-global-color-f5c6513); // #0F2A3D
 $black: var(--e-global-color-d9541e8);  // #000000
 $white: var(--e-global-color-a5f40b2);  // #FFFFFF
+$black-70: #454D4E;
+$black-50: #7A8385;
  
